--- a/index.html
+++ b/index.html
@@ -26,7 +26,19 @@
 
   <!-- Main Stylesheet File -->
   <link href="css/style.css" rel="stylesheet">
-
+  <style>
+    .ol{
+      margin-top: 25px;
+    }
+    .text{
+      color: black;
+      margin-left: 20px;
+      text-decoration : none;
+    }
+    .link{
+      margin-bottom:-14px;
+    }
+  </style>
 </head>
 
 <body>
@@ -269,7 +281,63 @@
 
       </div>
     </section><!-- #services -->
-
+       
+  <div class="container" style="margin-top:-30px;">
+    <hr class="featurette-divider">
+    <div class="container">
+      <div class="row featurette">
+        <div class="col-md-12 order-md-2">
+          <h2 class="text-center"><i class="fa fa-hand-o-right mr-8"></i><a class="text"
+              href="https://www.devopsschool.com/blog/top-10-it-certifications-in-the-world-for-software-engineers-in-2022/"><b> Top
+              10 IT Certifications in the world for Software Engineers</b></a> </h2>
+          <ol class="ol">
+            <li class="link">
+              <p><a class="text" href="https://www.devopsschool.com/certification/devops-certified-professional-dcp.html" target="_blank">DevOps
+                  Certified Professionals (DCP)</a></p>
+            </li>
+            <li class="link">
+              <p><a class="text"
+                  href="https://www.devopsschool.com/certification/devsecops-certified-professional-dsocp.html" target="_blank">DevSecOps
+                  Certified Professionals (DSOCP)</a></p>
+            </li>
+            <li class="link">
+              <p><a class="text" href="https://www.devopsschool.com/certification/sre-certified-professional-srecp.html" target="_blank">Site
+                  Reliability Engineering Certified Professionals (SRECP)</a></p>
+            </li>
+            <li class="link">
+              <p ><a class="text" href="https://www.devopsschool.com/certification/master-observability-engineering.html" target="_blank">Master in
+                  Observability Engineering (MOE)</a></p>
+            </li>
+            <li class="link">
+              <p ><a class="text" href="https://www.devopsschool.com/certification/gitops-certified-professional.html" target="_blank">GitOps
+                  Certified Professional (GOCP)</a></p>
+            </li>
+            <li class="link">
+              <p><a class="text" href="https://www.devopsschool.com/certification/master-in-devops-engineering.html" target="_blank">Master in
+                  DevOps Engineering (MDE)</a></p>
+            </li>
+            <li class="link">
+              <p><a class="text"
+                  href="https://www.devopsschool.com/certification/kubernetes-certified-administrator-developer.html" target="_blank">Kubernetes
+                  Certified Administrator & Developer (KCAD)</a></p>
+            </li>
+            <li class="link">
+              <p><a class="text" href="https://www.devopsschool.com/certification/mlops-certified-professional.html" target="_blank">MLOps
+                  Certified Professional (MLOCP)</a></p>
+            </li>
+            <li class="link">
+              <p><a class="text" href="https://www.devopsschool.com/certification/dataops-certified-professional.html" target="_blank">DataOps
+                  Certified Professional (DOCP)</a></p>
+            </li>
+            <li class="link">
+              <p><a class="text" href="https://www.devopsschool.com/certification/aiops-training-course.html" target="_blank">AiOps Certified
+                  Professional (AIOCP)</a></p>
+            </li>
+          </ol>
+        </div>
+      </div>
+    </div>
+    </div>
     <!--==========================
       Call To Action Section
     ============================-->
